# Systeme_recommandation_agricole

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  streamlit.py
.github/workflows/: cicd.yaml
data/processed/: yield_df_enriched.csv  yield_df_final.csv
notebooks/: notebook_analyse_exploratoire.ipynb  notebook_feature_engineering.ipynb  notebook_modelisation.ipynb
scripts/: config.py  data_cleaning.py  preprocessing_pipeline.py
tests/: test_endpoint.py  test_logic.py  test_simple.py
