[project]
name = "systeme-recommandation-agricole"
version = "0.1.0"
description = ""
authors = [
    { name = "Florian Schorer", email = "schorer.florian@me.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "numpy>=2.4.3,<3.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "ipykernel>=7.2.0,<8.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "xgboost>=2.1.0,<3.0.0", # Ajusté pour la stabilité
    "itables>=2.7.3,<3.0.0",
    "lightgbm>=4.5.0,<5.0.0",
    "mlflow>=2.15.0",         # Utilise une version récente stable
    "graphql-core==3.2.3",    # FIX: Version exacte pour éviter le bug d'import
    "graphene>=3.0.0,<4.0.0",  # FIX: Version compatible avec graphql-core 3.2.3
    "packaging==23.2",
    "streamlit (>=1.56.0,<2.0.0)",
    "huggingface-hub (>=1.9.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"